[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Configurations --- #

[tool.ruff]
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["./"]
force-sort-within-sections = true

[tool.mypy]
files = '*.py'
exclude = 'tests|__init__.py'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
mypy_path = ["./"]
