[project]
name = "mcp-server-arxiv"
version = "0.1.0"
description = "MCP Server providing a tool for searching ArXiv."
authors = [
    {name = "AI Assistant", email = "assistant@example.com"} # Or your details
]
readme = "README.md"
requires-python = ">=3.11" # Async requires newer Python

dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0",
    "arxiv>=2.1.0",          # ArXiv library
    "PyMuPDF>=1.24.0",       # fitz library for PDF parsing
    "aiofiles>=23.0.0",      # For async file operations if needed (less critical here)
    "langchain_mcp_adapters>=0.0.9", # Likely needed if client uses it
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio", # For async tests
    "httpx",
    "ruff",
    "black",
    "isort",
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Define where the source code for the package lives
packages = ["src/mcp_server_arxiv"]

# --- Tool Configurations (ruff, black, isort - same as others) ---

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W", "C90", "N", "D"]
ignore = ["D100", "D104", "D107", "D203", "D212"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88