[project]
name = "mcp-server-twitter"
version = "0.1.0"
description = "MCP Server for Twitter integration"
authors = [
    { name = "XyAgent", email = "agent@xyber.inc" },
]
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "starlette>=0.37.0",
    "pydantic-settings>=2.0",  
    "uvicorn[standard]",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest",
    "httpx", 
    "ruff",
    "black",
    "isort",
    # feel free to add/edit dependencies   
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_twitter"]